force-app/main/default/objects/Lead/fields/BrokerAgent__c.field-meta.xml
<CustomField>
    <fullName>BrokerAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker/Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Agent/Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>