force-app/main/default/objects/Lead/fields/Campaign_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Id__c</fullName>
    <label>Campaign Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>