force-app/main/default/objects/Lead/fields/Contact_Type_Default__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type_Default__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact Type Default</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact_Type__c.Id</field>
            <operation>equals</operation>
            <value>a1E8Y00000LrzMiUAJ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact_Type__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>