force-app/main/default/objects/Lead/fields/Current_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Current_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Pricing</label>
    <type>Checkbox</type>
</CustomField>