force-app/main/default/objects/Lead/fields/Employee_with_Court_Ordered_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Employee_with_Court_Ordered_Deductions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee with Court Ordered Deductions</label>
    <type>Checkbox</type>
</CustomField>