force-app/main/default/objects/Lead/fields/FileTest_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>FileTest_Created_Date__c</fullName>
    <label>FileTest Created Date</label>
    <type>DateTime</type>
</CustomField>