force-app/main/default/objects/Lead/fields/Individual_Email_Result__c.field-meta.xml
<CustomField>
    <fullName>Individual_Email_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Email Result</label>
    <referenceTo>et4ae5__IndividualEmailResult__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>