force-app/main/default/objects/Lead/fields/New_Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Business Entity</label>
    <type>Checkbox</type>
</CustomField>