force-app/main/default/objects/Lead/fields/Owner_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Name__c</fullName>
    <label>Owner&apos;s Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>