force-app/main/default/objects/Lead/fields/Pay_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Pay_Contact_Email__c</fullName>
    <label>Pay Contact Email</label>
    <type>Email</type>
</CustomField>