force-app/main/default/objects/Lead/fields/Pay_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Pay_Contact_Name__c</fullName>
    <label>Pay Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>