force-app/main/default/objects/Lead/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <defaultValue>$User.FirstName + &quot; &quot; +  $User.LastName</defaultValue>
    <description>Salesperson for the lead/account.</description>
    <label>Sales Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>