force-app/main/default/objects/Lead/fields/Sample_Payroll_Reports__c.field-meta.xml
<CustomField>
    <fullName>Sample_Payroll_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Payroll Reports</label>
    <type>Checkbox</type>
</CustomField>