force-app/main/default/objects/Lead/fields/Weightage_Score__c.field-meta.xml
<CustomField>
    <fullName>Weightage_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Weightage Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>