force-app/main/default/objects/Lead/fields/Workers_Comp_Dec_Page__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Dec_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Workers Comp Dec Page</label>
    <type>Checkbox</type>
</CustomField>