force-app/main/default/objects/Lead/fields/X3_Year_Loss_Runs__c.field-meta.xml
<CustomField>
    <fullName>X3_Year_Loss_Runs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3 Year Loss/Runs</label>
    <type>Checkbox</type>
</CustomField>