force-app/main/default/objects/Lead/recordTypes/Leads.recordType-meta.xml
<RecordType>
    <fullName>Leads</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>Leads</label>
</RecordType>