force-app/main/default/objects/Lead/recordTypes/MC_Generated_Lead.recordType-meta.xml
<RecordType>
    <fullName>MC_Generated_Lead</fullName>
    <active>true</active>
    <businessProcess>MC generated leads process</businessProcess>
    <description>This record type is used for the leads that are generated from the marketing cloud.</description>
    <label>MC Generated Lead</label>
</RecordType>