force-app/main/default/objects/Lead/recordTypes/Mobile_View.recordType-meta.xml
<RecordType>
    <fullName>Mobile_View</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>Mobile View</label>
</RecordType>