force-app/main/default/objects/Lead/listViews/Troy_Leads.listView-meta.xml
<ListView>
    <fullName>Troy_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Manager__c</field>
        <operation>equals</operation>
        <value>Thomas Jordan</value>
    </filters>
    <label>Troy Leads</label>
</ListView>